@@ -1,3 +1,7 @@
+2011-02-23  Ernesto Baschny  <ernst@cron-it.de>
+ 
+	* Fixed bug #17314: Swift_RfcComplianceException is always thrown in t3lib_formmail when forceReturnPath=1 is set
+
 2011-02-23  Tolleiv Nietsch  <typo3@tolleiv.de>
 
 	* Fixed bug #17511: tx_install_session::write doesn't fix permissions
